--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -4,11 +4,8 @@
   align-items: center; /* center items vertically */
   justify-content: center;
   flex-wrap: wrap;
-  gap: .5rem;
 }
 
 .a {
-  text-decoration: none;
-  color: #000;
-  white-space: nowrap;
+  padding: 16px 16px
 }
