add border radius variable

--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -1,6 +1,6 @@
 .button {
     display:inline-block;
-    border-radius:16px;
+    border-radius:var(--border-radius);
     background-color:var(--primary-color-yellow);
     padding: .5em 1em;
   }
