--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
   font-family: 'Karla', sans-serif;
   font-weight: normal; /* Regular */
   font-size: 16pt;
-  /* line-height: 1.5; */
+  line-height: 1.5;
   max-width: 65ch;
 }
 
