--- a/src/Components/Testimonials/Testimonial.module.css
+++ b/src/Components/Testimonials/Testimonial.module.css
@@ -2,7 +2,7 @@
     background-color: var(--secondary-color-grey);
     border-top-left-radius: var(--border-radius);
     border-top-right-radius: var(--border-radius);
-    padding: 1rem 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
