--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--secondary-color-black);
 }
 
 .displayTitle {
@@ -68,7 +69,7 @@ body {
 
 .link {
   text-decoration: none;
-  color: #000;
+  color: var(--secondary-color-black);
   white-space: nowrap;
 }
 
