--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -5,7 +5,28 @@
     padding-top: 2rem;
     padding-bottom: 2rem;
   }
+.flexbox{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
 .ul {
-    list-style: none;
+  list-style: none;
+}
+
+.socialMedia{
+  display: flex;
+  gap: 1rem;
+}
+
+.socialMedia img{
+  height: 25px;
+  width: auto;
+}
+
+.logoLarge{
+  height: auto;
+  width: auto;
+  flex-shrink: 0;
 }
