--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,14 @@ body {
 .sectionTitle {
   font-family: 'Karla', sans-serif;
   font-weight: 800; /* Extra Bold */
-  font-size: 16pt;
+  font-size: 20pt;
+}
+
+/* Section Categories */
+.sectionCategories {
+  font-family: 'Karla', sans-serif;
+  font-weight: 800; /* Extra Bold */
+  font-size: 18pt;
 }
 
 /* Card Title */
